--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "analyze": "tsx src/scripts/analyze.ts"
+    "analyze": "tsx src/scripts/analyze.ts",
+    "monitor": "tsx src/scripts/monitor.ts"
   },
   "dependencies": {
     "@solana/web3.js": "^1.87.6",
